Update frecuencia.html to redirect to temporal site

--- a/frecuencia.html
+++ b/frecuencia.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='http://digital.psico.edu.uy/frecuencia_lexica/'" />
+    <meta http-equiv="refresh" content="0; url='https://frecuencia-lexica-lsu-c7605df8113e.herokuapp.com/'" />
   </head>
   <body>
-    <p>Pronto serás redirigido a <a href="http://digital.psico.edu.uy/frecuencia_lexica/">http://digital.psico.edu.uy/frecuencia_lexica/</a></p>
+    <p>Pronto serás redirigido a <a href="https://frecuencia-lexica-lsu-c7605df8113e.herokuapp.com/">https://frecuencia-lexica-lsu-c7605df8113e.herokuapp.com/</a></p>
   </body>
 </html>
