--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		    <p>
 		    	Los voluntarios deberán puntuar una lista de señas de la LSU de acuerdo a qué tanto las usan en la vida cotidiana.
 		    </p>
-			<a class="button" href="http://digital.psico.edu.uy/frecuencia_lexica">
-				Participar
-			</a>
-		</article>
-	</main>
+				<a class="button" href="frecuencia.html">
+					Leer más
+				</a>
+			</article>
+		</main>
   </body>
 </html>
