--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
 					Leer más
 				</a>
 			</article>
+			<article>
+		    <h2>
+		    	Iconicidad en LSU
+		    </h2>
+		    <p>
+		    	Diversos estudios demuestran que la iconicidad afecta el procesamiento lingüístico y cuando no se controla puede confundir los resultados de un experimento psicolingüístico. Dada su importancia para la investigación psicolingüística y la falta de datos sólidos para la lengua de señas, es que este estudio busca generar una base para el desarrollo futuro de la investigación psicolingüística de la LSU.
+		    </p>
+		    <p>
+		    	Los voluntarios deberán puntuar una lista de señas de la LSU de acuerdo a qué tan icónicas les parece que son.
+		    </p>
+				<a class="button" href="iconicidad.html">
+					Leer más
+				</a>
+			</article>
 		</main>
   </body>
 </html>
