--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 	    <p>Experimentos psico-lingüísticos relacionados con la lengua de señas del uruguay (LSU) realizados en el <a href="https://cibpsi.psico.edu.uy/">Centro de Investigación Básica en Psicología (CIBPsi)</a>.</p>
 	</header>
   	<main>
+		<article>
+		    <h2>
+		    	Encuesta para el involucramiento de la población sorda uruguaya en la investigación
+		    </h2>
+		    <p>
+		    	La investigación tiene como objetivo crear una encuesta nacional de investigación sobre el procesamiento mental de la LSU. Esta encuesta servirá como herramienta para la inclusión nacional e involucramiento temprano de la comunidad sorda uruguaya en la investigación científica sobre su lengua.
+		    </p>
+		    <p>
+		    	Los voluntarios deberán responder a una serie de afirmaciones según cada propuesta planteada.
+		    </p>
+				<a class="button" href="encuesta.html">
+					Leer más
+				</a>
+		</article>
   		<article>
 		    <h2>
 		    	Frecuencia subjetiva en LSU
@@ -24,8 +38,8 @@
 				<a class="button" href="frecuencia.html">
 					Leer más
 				</a>
-			</article>
-			<article>
+		</article>
+		<article>
 		    <h2>
 		    	Iconicidad en LSU
 		    </h2>
